kubectl/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  ports:
    - port: 5678
      targetPort: web
  selector:
    app: n8n
